--- a/styles/main.css
+++ b/styles/main.css
@@ -46,6 +46,15 @@ html, body {
   color: #ddd;
 }
 
+#note {
+  text-align: center;
+  display: block;
+  color: white;
+  font-size: 20px;
+  font-weight: 400;
+  height: 4em;
+}
+
 #note-btns {
   text-align: right;
 }
